--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -3,13 +3,13 @@
 .menu {
     width: 100px;
     height: auto;
-    border: 1px solid var(--very-light-pink);
+    border: 1px solid $--very-light-pink;
     border-radius: 6px;
     padding: 20px 20px 0 20px;
     position: absolute;
     top: 60px;
     right: 50px;
-    background-color: var(--white);
+    background-color: $--white;
   }
   .menu ul {
     list-style: none;
@@ -25,14 +25,14 @@
   }
   .menu ul li:last-child {
     padding-top: 20px;
-    border-top: 1px solid var(--very-light-pink);
+    border-top: 1px solid $--very-light-pink;
   }
   .menu ul li:last-child a {
-    color: var(--hospital-green);
-    font-size: var(--sm);
+    color: $--hospital-green;
+    font-size: $--sm;
   }
   .menu ul li a {
-    color: var(--back);
+    color: $--black;
     text-decoration: none;
     margin-bottom: 20px;
     display: inline-block;
