--- a/src/styles/ShoppingCartItem.scss
+++ b/src/styles/ShoppingCartItem.scss
@@ -17,9 +17,9 @@
   object-fit: cover;
 }
 .shopping-cart p:nth-child(2) {
-  color: var(--very-light-pink);
+  color: $--very-light-pink;
 }
 .shopping-cart p:nth-child(3) {
-  font-size: var(--md);
+  font-size: $--md;
   font-weight: bold;
 }
