se agrego menuMobile con sus estilos; se renombraron algunos .scss por module.scss; se cambiaron las clases y se modificaron las rutas en todo el proyecto

--- a/src/styles/ProductDetails.scss
+++ b/src/styles/ProductDetails.scss
@@ -20,7 +20,7 @@
 .ProductDetail-close:hover {
   cursor: pointer;
 }
-.ProductDetail > img:nth-child(2) {
+.ProductDetail > Image:nth-child(2) {
   width: 100%;
   height: 360px;
   object-fit: cover;
