--- a/src/styles/ShoppingCartItem.scss
+++ b/src/styles/ShoppingCartItem.scss
@@ -10,7 +10,7 @@
 .shopping-cart figure {
   margin: 0;
 }
-.shopping-cart figure img {
+.shopping-cart figure Image {
   width: 70px;
   height: 70px;
   border-radius: 20px;
