--- a/src/styles/MyOrder.module.scss
+++ b/src/styles/MyOrder.module.scss
@@ -12,7 +12,7 @@
 	border-radius: 6px;
   border: 1px solid $--very-light-pink;
   }
-  .title {
+  .Title {
     font-size: $--lg;
     margin-bottom: 40px;
   }
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
   }
-  .order {
+  .Order {
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 16px;
@@ -35,19 +35,19 @@
     border-radius: 8px;
     padding: 0 24px;
   }
-  .order p:nth-child(1) {
+  .Order p:nth-child(1) {
     display: flex;
     flex-direction: column;
   }
-  .order p span:nth-child(1) {
+  .Order p span:nth-child(1) {
     font-size: $--md;
     font-weight: bold;
   }
-  .order p span:nth-child(2) {
+  .Order p span:nth-child(2) {
     font-size: $--sm;
     color: $--very-light-pink;
   }
-  .order p:nth-child(2) {
+  .Order p:nth-child(2) {
     text-align: end;
     font-weight: bold;
   }
