--- a/src/styles/NotFound.scss
+++ b/src/styles/NotFound.scss
@@ -1,6 +1,6 @@
 @import '_vars';
 
-.login {
+.NotFound {
     width: 100%;
     height: 100vh;
     display: grid;
@@ -37,8 +37,4 @@
     margin-top: 14px;
     margin-bottom: 30px;
   }
-  @media (max-width: 640px) {
-    .logo {
-      display: block;
-    }
-  }
+  
