--- a/src/styles/ProductItem.module.scss
+++ b/src/styles/ProductItem.module.scss
@@ -3,7 +3,7 @@
 .ProductItem {
 	width: 240px;
 }
-.ProductItem img {
+.ProductItem Image {
 	width: 240px;
 	height: 240px;
 	border-radius: 20px;
@@ -18,7 +18,7 @@
 .product-info figure {
 	margin: 0;
 }
-.product-info figure img {
+.product-info figure Image {
 	width: 35px;
 	height: 35px;
 }
@@ -41,7 +41,7 @@
 	.ProductItem {
 		width: 140px;
 	}
-	.ProductItem img {
+	.ProductItem Image {
 		width: 140px;
 		height: 140px;
 	}
