--- a/src/styles/MyOrder.module.scss
+++ b/src/styles/MyOrder.module.scss
@@ -60,8 +60,12 @@
     cursor: pointer;
     font-size: $--md;
     font-weight: bold;
-    height: 50px;
+    height: 35px;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 15px;
   }
+
   @media (max-width: 640px) {
     .MyOrder {
       width: 100%;
